--- a/filter-local.properties
+++ b/filter-local.properties
@@ -1,12 +1,12 @@
-google.app.id=enterId
+google.app.id=zenmoney-tools
 google.app.version=1
 
-google.jsapi.http.key=enterKey
-google.jsapi.https.key=enterKey
+google.jsapi.http.key=ABQIAAAAQDWIMIcLi5mSRdRme0-R0RTQZM2Q0_3McszO-xWLl6TbnPeVFBQGw0e1D7isti-HTcP2AreK85ohWA
+google.jsapi.https.key=ABQIAAAAQDWIMIcLi5mSRdRme0-R0RTQZM2Q0_3McszO-xWLl6TbnPeVFBQGw0e1D7isti-HTcP2AreK85ohWA
 
 application.secureChannel=http
 application.hostname=localhost:8080
 
 jquery.ver=1.6.3
 
-mail.fromAddress=do-not-reply@localhost.com
+mail.fromAddress=dmitry@sid0renk0.ru
